--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css" type="text/css">
-    <title>Tech-Blogginator</title>
+    <title>THE Tech Blog</title>
 </head>
 <body class="flex-column min-100-vh">
     <header class="hero">
@@ -25,14 +25,12 @@
                 {{/if}}
             </ul>
         </nav>
-        <h1 class="app-title">Tech-Blogginator</h1>
+        <h1 class="app-title">THE Tech Blog</h1>
     </header>
     <main>
       {{{ body }}}
     </main>
   </div>
-
-{{!-- in order to not receive an error after removing the logout button from the page, wrap the <script> element with an {{#if}} helper --}}
 {{#if loggedIn}}
 <script src="/js/logout.js"></script>
 {{/if}}
