--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -12,7 +12,7 @@
   </div>
   <div class="card-body">
     <div class="content">
-      {{contents}}
+      {{content}}
     </div>
     <div>
       {{comments.length}}
