--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -3,7 +3,7 @@
     {{#if this}}
     {{#each this}}
         <div class="comment">
-            <p>{{commentary}}</p>
+            <p>{{content}}</p>
             <p>&mdash; {{user.username}} on {{format_date date_created}}</p>
         </div>
     {{/each}}
