--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,7 @@
 <article class="post card">
   <div class="card-header">
     <div class="title">
-      {{title}}
+      {{post_title}}
     </div>
     <div class="meta">
       Posted by
